--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI:mongodb://127.0.0.1/sbnb
+MONGODB_URI:mongodb+srv://stefan:E5DDDfObU4OGOwVp@cluster0.insy4.mongodb.net/?retryWrites=true&w=majority
