--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/platform-express": "^10.0.0",
+    "dotenv": "^16.3.1",
     "joi": "^17.11.0",
     "mongoose": "^7.6.0",
     "reflect-metadata": "^0.1.13",
