--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "dotenv": "^16.3.1",
     "joi": "^17.11.0",
     "mongoose": "^7.6.0",
+    "nestjs-pino": "^3.5.0",
+    "pino-http": "^8.5.0",
+    "pino-pretty": "^10.2.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
