Add auth/users app and modules

--- a/apps/reservations/Dockerfile
+++ b/apps/reservations/Dockerfile
@@ -1,8 +1,8 @@
 FROM node:18.17.0-alpine as development
 
 # Create app directory
-RUN mkdir -p /users/src/app
-WORKDIR /users/src/app
+RUN mkdir -p /usr/src/app
+WORKDIR /usr/src/app
 
 COPY package.json ./
 COPY pnpm-lock.yaml ./
@@ -15,7 +15,7 @@ RUN yarn add @nestjs/cli --global
 
 RUN pnpm install
 
-COPY . .
+COPY ./src .
 
 RUN pnpm run build
 
@@ -24,15 +24,19 @@ FROM node:18.17.0-alpine as production
 ARG NODE_ENV=production
 ENV NODE_ENV=${NODE_ENV}
 
-WORKDIR /users/src/app
+WORKDIR /usr/src/app
 
 COPY package.json ./
 COPY pnpm-lock.yaml ./
 
 RUN npm install -g pnpm
 
+RUN npm install -g yarn --force
+
+RUN yarn add @nestjs/cli --global
+
 RUN pnpm install --prod
 
-COPY --from=development /users/src/app/dist ./dist
+COPY --from=development /usr/src/app/dist ./dist
 
 CMD [ "pnpm", "run", "start:dev", "reservations" ]
