--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-MONGODB_URI: mongodb+srv://stefan:E5DDDfObU4OGOwVp@cluster0.insy4.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://stefan:E5DDDfObU4OGOwVp@cluster0.insy4.mongodb.net/?retryWrites=true&w=majority
+JWT_SECRET=T1KcpoHlaDvasxGla0qK8mZyQWUjdW
+JWT_EXPIRATION=3600
