--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 MONGODB_URI=mongodb+srv://stefan:E5DDDfObU4OGOwVp@cluster0.insy4.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET=T1KcpoHlaDvasxGla0qK8mZyQWUjdW
 JWT_EXPIRATION=3600
+TCP_PORT=3002
+AUTH_HOST=auth
+AUTH_POST=3002
